# leaf

./: Cargo.toml  README.md  leafc_config.toml  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json.example
common/: Cargo.toml
common/src/: answers.rs  building.rs  conc_loop.rs  ffi.rs  lib.rs  program_dep.rs  type_info.rs  types.rs  utils.rs
compiler/: Cargo.toml
docs/src/: leaf.md  (+1 more)
macros/: Cargo.toml
runtime/backends/cf_tracer/: Cargo.toml
runtime/backends/cf_tracer/src/: call.rs  interface.rs  lib.rs  record.rs
runtime/backends/cf_tracer/src/cf_tracer/: call.rs  constraint.rs  instance.rs  mod.rs  record.rs  tracing_i.rs
runtime/backends/mdsan/: Cargo.toml
runtime/backends/mdsan/src/: alias.rs  call.rs  instance.rs  interface.rs  lib.rs
runtime/backends/mdsan/src/mdsan/: alias.rs  assignment.rs  call.rs  mod.rs  operand.rs  place.rs  raw_mem.rs  type_info.rs
runtime/backends/mdsan/src/mdsan/state/: mod.rs
runtime/backends/mdsan/src/mdsan/state/pointer_based/: mod.rs
runtime/backends/mdsan/src/state/: lifetime.rs
runtime/backends/mdsan/src/state/pointer_based/: mod.rs
runtime/backends/symex/: Cargo.toml
runtime/backends/symex/src/: alias.rs  config.rs  interface.rs  lib.rs  memory.rs  operand.rs  sym_vars.rs
runtime/backends/symex/src/call/: mod.rs
runtime/backends/symex/src/expr/: lazy.rs  mod.rs  place.rs  prelude.rs  translators.rs
runtime/backends/symex/src/expr/builders/: mod.rs
runtime/backends/symex/src/expr/builders/abs/: logger.rs  macros.rs  sym_place.rs
runtime/backends/symex/src/implication/: investigate.rs
runtime/backends/symex/src/implication/value/: mod.rs
runtime/backends/symex/src/state/pointer_based/: memory.rs
runtime/backends/symex/src/state/pointer_based/sym_place/: resolution.rs
runtime/backends/symex/src/symex/: alias.rs  annotation.rs  assignment.rs  concrete.rs  config.rs  constraint.rs  instance.rs  mod.rs  operand.rs  outgen.rs  place.rs  type_info.rs
runtime/backends/symex/src/symex/call/: mod.rs
runtime/backends/symex/src/symex/expr/: fmt.rs  lazy.rs  place.rs  translators.rs
runtime/backends/symex/src/symex/expr/builders/abs/: chained.rs  composite.rs  logger.rs  macros.rs  mod.rs  proj.rs
runtime/backends/symex/src/symex/state/: mod.rs
runtime/backends/symex/src/symex/state/pointer_based/: memory.rs  mod.rs
runtime/backends/symex/src/symex/state/pointer_based/sym_place/: mod.rs
runtime/backends/symex/src/symex/trace/: query.rs  record.rs
runtime/backends/symex/src/symex/trace/constraints/: divergence.rs  dumpers.rs  mod.rs  utils.rs
runtime/backends/symex/src/trace/: record.rs
runtime/backends/symex/src/trace/constraints/: branch_cov.rs  divergence.rs  dumpers.rs  mod.rs  sanity_check.rs  utils.rs
runtime/flavors/cf_tracer/: Cargo.toml
runtime/flavors/cf_tracer/src/: lib.rs
runtime/flavors/mdsan/: Cargo.toml
runtime/flavors/mdsan/src/: lib.rs
runtime/flavors/symex/: Cargo.toml
runtime/flavors/symex/src/: lib.rs
runtime/flavors/symex_li/: Cargo.toml
runtime/flavors/symex_li/src/: lib.rs
runtime/flavors/symex_li_no_implicit/: Cargo.toml  build.rs  src
runtime/lib/: Cargo.toml
runtime/lib/src/: lib.rs
runtime/lib/src/abs/: backend.rs  fmt.rs  mod.rs  place.rs  utils.rs
runtime/lib/src/abs/expr/: macros.rs  mod.rs  proj.rs  sym_place.rs  variance.rs
runtime/lib/src/backends/: mod.rs
runtime/lib/src/backends/basic/: annotation.rs  assignment.rs  concrete.rs  constraint.rs  instance.rs  memory.rs  mod.rs  operand.rs  outgen.rs  place.rs  sym_vars.rs  type_info.rs
runtime/lib/src/backends/basic/call/: mod.rs
runtime/lib/src/backends/basic/expr/: builders.rs  lazy.rs  mod.rs
runtime/lib/src/backends/basic/implication/: investigate.rs
runtime/lib/src/backends/basic/state/: mod.rs
runtime/lib/src/backends/basic/state/pointer_based/: mod.rs
runtime/lib/src/backends/basic/state/pointer_based/sym_place/: mod.rs
runtime/lib/src/backends/basic/trace/: mod.rs  query.rs
runtime/lib/src/backends/basic/trace/constraints/: mod.rs
runtime/lib/src/backends/cf_tracer/: call.rs  instance.rs  mod.rs  record.rs
runtime/lib/src/backends/mdsan/: alias.rs  assignment.rs  call.rs  instance.rs  memory.rs  mod.rs  operand.rs  place.rs  raw_mem.rs  type_info.rs
runtime/lib/src/backends/mdsan/state/: lifetime.rs  mod.rs
runtime/lib/src/backends/mdsan/state/pointer_based/: memory.rs  mod.rs
runtime/lib/src/backends/symex/: alias.rs  annotation.rs  assignment.rs  concrete.rs  constraint.rs  instance.rs  memory.rs  mod.rs  operand.rs  outgen.rs  place.rs  sym_vars.rs  type_info.rs
runtime/lib/src/backends/symex/call/: mod.rs
runtime/lib/src/backends/symex/expr/: builders.rs  fmt.rs  lazy.rs  mod.rs  place.rs  prelude.rs  sym_place.rs  translators.rs
runtime/lib/src/backends/symex/expr/builders/: mod.rs
runtime/lib/src/backends/symex/expr/builders/abs/: macros.rs  sym_place.rs
runtime/lib/src/backends/symex/implication/: investigate.rs  mod.rs
runtime/lib/src/backends/symex/implication/value/: mod.rs
runtime/lib/src/backends/symex/state/: mod.rs  sym_place.rs
runtime/lib/src/backends/symex/state/pointer_based/: memory.rs  mod.rs
runtime/lib/src/backends/symex/state/pointer_based/sym_place/: mod.rs  resolution.rs
runtime/lib/src/backends/symex/trace/: mod.rs  query.rs  record.rs
runtime/lib/src/backends/symex/trace/constraints/: divergence.rs  mod.rs  sanity_check.rs
runtime/lib/src/call/: mod.rs
runtime/lib/src/memory/: mod.rs  raw_addr.rs
runtime/lib/src/outgen/: mod.rs
runtime/lib/src/pri/: late_init.rs  late_init_x.rs  mod.rs  noop.rs  refs.rs
runtime/lib/src/pri/basic/: mod.rs
runtime/lib/src/pri/fluent/: mod.rs
runtime/lib/src/pri/fluent/backend/: mod.rs  shared.rs
runtime/lib/src/solvers/: map.rs  mod.rs  z3.rs
runtime/lib/src/trace/: adapt.rs  agg.rs  coverage.rs  dump.rs  filter.rs  inspect.rs  log.rs  mod.rs  sanity_check.rs
runtime/lib/src/trace/divergence/: coverage.rs  filter.rs  mod.rs
runtime/lib/src/type_info/: mod.rs
runtime/lib/src/utils/: alias.rs  file.rs  logging.rs  meta.rs  mod.rs
(+95 files in other folders)
