[workspace]
resolver = "2"
members = [
    "common",
    "compiler",
    "runtime/backends/*",
    "runtime/flavors/*",
    "runtime/lib",
    "macros",
]
exclude = ["runtime/shim", "samples/crates/", "scripts", ".notes/*"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
version = "0.2.0"

[workspace.dependencies]
# Unless we specify the package, it won't be renamed.
common = { path = "common", package = "common" }
macros = { path = "macros" }
leaf_macros = { path = "macros", package = "macros"}
runtime_symex = { path = "runtime/flavors/symex" }
runtime_symex_no_implicit = { path = "runtime/flavors/symex_no_implicit" }
runtime_noop = { path = "runtime/flavors/noop" }
libafl_leaf = { path = "integration/libafl/lib" }

clap = { version = "4.6.1", features = ["derive"] }
config = "0.15.7"
const_format = "0.2.34"
delegate = "0.13.2"
derive_more = { version = "2.1", features = ["full"] }
itertools = "0.15.0"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rkyv = { version = "0.8" }
z3 = { git = "https://github.com/prove-rs/z3.rs", rev = "60001b36fc8a7ab1d4f22595e80a3b6f7adc1bcf" }
z3-sys = { git = "https://github.com/prove-rs/z3.rs", rev = "60001b36fc8a7ab1d4f22595e80a3b6f7adc1bcf" }

libafl = { git = "https://github.com/sfu-rsl/LibAFL", tag = "0.15.2", features = [
    "std",
] }
libafl_bolts = { git = "https://github.com/sfu-rsl/LibAFL", tag = "0.15.2" }
libafl_targets = { git = "https://github.com/sfu-rsl/LibAFL", tag = "0.15.2" }

[profile.release]
debug = true
split-debuginfo = "packed"
