[package]
name = "runtime"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "leafrt"
crate-type = ["rlib"]

[profile.release]
debug = true


[dependencies]
common = { workspace = true, features = [
    "type_info",
    "type_info_rw",
    "config",
    "logging",
    "trace_types",
    "z3",
    "answers",
    "directed",
    "program_dep",
    "ffi_ty_std_convert",
] }
leaf_macros = { path = "../../macros", package = "macros" }

config = { workspace = true, features = ["toml", "json"] }

# tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
json-subscriber = "0.3"
tracing-tree = { workspace = true }

paste = "1.0"
z3 = { workspace = true }
z3-sys = { workspace = true }
delegate = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = "0.4.38"
const_format = { workspace = true }

[lints.rust]

[features]
default = []
# When enabled, value losses will be checked even in release mode.
release_value_loss_checks = []

implicit_flow = []

runtime_access_raw_ptr = ["common/type_db_access_unsync"]
runtime_access_mutex = []

