[package]
name = "runtime_backend_cf_tracer"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "leafrtb_cf_tracer"
crate-type = ["rlib"]

[profile.release]
debug = true


[dependencies]
common = { workspace = true, features = [
    "config",
    "logging",
    "trace_types",
] }
leaf_runtime = { workspace = true }

config = { workspace = true, features = ["toml", "json"] }

# tracing
tracing-subscriber = { workspace = true, features = ["json"] }
tracing = { workspace = true, features = ["valuable"] }
valuable = { version = "0.1.1", features = ["derive"] }
valuable-serde = "0.1.1"
tracing-appender = "0.2"
json-subscriber = "0.3"

paste = "1.0"
delegate = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
cfg-if = { version = "1.0" }

[lints.rust]

[features]
default = []

runtime_access_raw_ptr = ["common/type_db_access_unsync"]
runtime_access_mutex = []
