[package]
name = "runtime_backend_mdsan"
license = { workspace = true }
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "leafrtb_mdsan"
crate-type = ["rlib"]

[profile.release]
debug = true


[dependencies]
common = { workspace = true, features = [
    "type_info",
    "type_info_rw",
    "config",
    "logging",
] }
leaf_runtime = { workspace = true }

config = { workspace = true, features = ["toml", "json"] }

# tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
json-subscriber = "0.3"

paste = "1.0"
delegate = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
const_format = { workspace = true }
cfg-if = { version = "1.0" }

[lints.rust]

[features]
default = []
release_value_loss_checks = ["leaf_runtime/release_value_loss_checks"]

runtime_access_raw_ptr = ["common/type_db_access_unsync"]
runtime_access_mutex = []
