[package]
name = "runtime_backend_symex"
license = { workspace = true }
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "leafrtb_symex"
crate-type = ["rlib"]

[profile.release]
debug = true


[dependencies]
common = { workspace = true, features = [
    "type_info",
    "type_info_rw",
    "config",
    "logging",
    "trace_types",
    "z3",
    "answers",
    "directed",
    "program_dep",
] }
leaf_runtime = { workspace = true }

config = { workspace = true, features = ["toml", "json"] }

# tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
json-subscriber = "0.3"
tracing-tree = { workspace = true }

paste = "1.0"
z3 = { workspace = true }
z3-sys = { workspace = true }
delegate = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
const_format = { workspace = true }
cfg-if = { version = "1.0" }

[lints.rust]

[features]
default = []
release_value_loss_checks = ["leaf_runtime/release_value_loss_checks"]

implicit_flow = []

runtime_access_raw_ptr = ["common/type_db_access_unsync"]
runtime_access_mutex = []

