[package]
name = "runtime_mdsan"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "leafrt_mdsan"
crate-type = ["cdylib"]

[dependencies]
common = { workspace = true }
runtime = { path = "../../lib", features = ["runtime_access_raw_ptr"] }
