[package]
name = "runtime_mdsan"
license = { workspace = true }
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "leafrt_mdsan"
crate-type = ["cdylib"]

[dependencies]
common = { workspace = true }
backend = { path = "../../backends/mdsan", package = "runtime_backend_mdsan", features = [
    "runtime_access_raw_ptr",
] }
